[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/gui/quests.png" type="Texture" id=1]
[ext_resource path="res://gui/hud/QuestBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/hud/quests_widget.gd" type="Script" id=3]

[sub_resource type="GDScript" id=1]
script/source = "extends Node


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass


func _on_QuestButton_button_down():
	pass # Replace with function body.
"

[node name="QuestsWidget" type="Control"]
script = ExtResource( 3 )

[node name="QuestButton" type="TextureButton" parent="."]
margin_right = 24.0
margin_bottom = 24.0
texture_normal = ExtResource( 1 )
script = SubResource( 1 )

[node name="QuestBox" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="button_up" from="QuestButton" to="." method="_on_QuestButton_button_up"]
